<resources>
    <string name="app_name">rithika199-1</string>
    <string name="display_toast">Display Toast</string>
    <string name="change_background_colour">Change Background Colour</string>
    <string name="text_to_change">TEXT TO CHANGE!!</string>
    <string name="change_font_size">Change Font Size</string>
    <string name="change_font_color">Change Font Color</string>
    <string name="_200701199_rithika_s_cse_d">200701199,Rithika S,Cse-D</string>
</resources>